[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "UVRC"
version = "1.0"
description = "Easy to use audio stem separation, using custom models"
authors = ["BF667"]
license = "MIT"
readme = "README.md"
packages = [{include = "UVRC"}]

homepage = "https://github.com/BF667/UVRC"
repository = "https://github.com/BF667/UVRC"
documentation = "https://github.com/BF667/UVRC/blob/main/README.md"
keywords = ["audio", "sound", "karaoke"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Mixers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2"
audio-separator  = "*"

[tool.poetry.extras]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]
dml = ["onnxruntime-directml", "torch_directml"]

[tool.poetry.scripts]
UVRC = 'UVRC.inference:main'

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "^4.1.0"
